work towards uploading files to folder